// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders correctly 1`] = `
<View
  style={
    Object {
      "backgroundColor": "#13456d",
      "flex": 1,
      "height": "100%",
    }
  }
>
  <Image
    source={
      Object {
        "uri": "https://icon-library.com/images/mostly-cloudy-icon/mostly-cloudy-icon-4.jpg",
      }
    }
    style={
      Object {
        "height": 250,
        "marginLeft": "auto",
        "marginRight": "auto",
        "marginTop": 15,
        "width": 300,
      }
    }
  />
  <View
    style={
      Object {
        "alignItems": "center",
        "backgroundColor": "#cabaa9",
        "borderRadius": 20,
        "color": "white",
        "marginLeft": "auto",
        "marginRight": "auto",
        "marginTop": 40,
        "width": "90%",
      }
    }
  >
    <TextInput
      onChangeText={[Function]}
      placeholder="Enter Country name"
      placeholderTextColor="black"
      value=""
    />
  </View>
  <View>
    <View
      accessibilityState={
        Object {
          "disabled": true,
        }
      }
      accessible={true}
      collapsable={false}
      focusable={true}
      onClick={[Function]}
      onResponderGrant={[Function]}
      onResponderMove={[Function]}
      onResponderRelease={[Function]}
      onResponderTerminate={[Function]}
      onResponderTerminationRequest={[Function]}
      onStartShouldSetResponder={[Function]}
      style={
        Object {
          "alignItems": "center",
          "backgroundColor": "#cabaa9",
          "borderRadius": 18,
          "height": 45,
          "marginLeft": "auto",
          "marginRight": "auto",
          "marginTop": 18,
          "opacity": 1,
          "textAlign": "center",
          "width": 100,
        }
      }
    >
      <Text
        style={
          Object {
            "color": "black",
            "fontSize": 15,
            "marginTop": 13,
          }
        }
      >
        Submit
      </Text>
    </View>
  </View>
  <Text
    style={
      Object {
        "color": "black",
        "fontSize": 28,
        "fontWeight": "500",
        "marginTop": 80,
        "textAlign": "center",
      }
    }
  >
    All Weather Infomartion
  </Text>
  <Text
    style={
      Array [
        Object {
          "color": "black",
          "fontSize": 28,
          "fontWeight": "500",
          "marginTop": 80,
          "textAlign": "center",
        },
        Object {
          "marginTop": 2,
        },
      ]
    }
  >
    of Location
  </Text>
</View>
`;

exports[`renders correctly 2`] = `
<View
  style={
    Array [
      Object {
        "height": "100%",
      },
      Object {
        "backgroundColor": "#f4c679",
      },
    ]
  }
>
  <View
    style={
      Object {
        "marginLeft": "auto",
        "marginRight": "auto",
      }
    }
  >
    <Text
      style={
        Object {
          "color": "white",
          "fontSize": 22,
          "marginTop": 4,
          "marginVertical": 10,
          "textAlign": "center",
        }
      }
    >
      Sun Aug 28 2022
    </Text>
    <Text
      style={
        Object {
          "color": "white",
          "fontSize": 25,
          "fontWeight": "400",
          "textAlign": "center",
        }
      }
    >
      undefined, undefined
    </Text>
    <Image
      source={
        Object {
          "uri": "https://png.pngtree.com/element_our/20190529/ourlarge/pngtree-weather-forecast-image_1197280.jpg",
        }
      }
      style={
        Object {
          "height": 200,
          "marginLeft": "auto",
          "marginRight": "auto",
          "marginTop": 20,
          "width": 200,
        }
      }
    />
    <Text
      style={
        Object {
          "color": "white",
          "fontSize": 38,
          "marginTop": 8,
          "textAlign": "center",
        }
      }
    >
      NaN °C
    </Text>
    <Text
      style={
        Object {
          "color": "white",
          "fontSize": 25,
          "fontWeight": "400",
          "textAlign": "center",
        }
      }
    >
      Normal
    </Text>
    <Text
      style={
        Object {
          "color": "white",
          "fontSize": 22,
          "fontWeight": "500",
          "marginVertical": 10,
          "textAlign": "center",
        }
      }
    >
      Min NaN °C / Max NaN °C
    </Text>
  </View>
  <View
    style={
      Object {
        "flexDirection": "row",
        "justifyContent": "space-around",
        "marginLeft": -18,
        "marginTop": 10,
      }
    }
  >
    <View>
      <Text
        style={
          Object {
            "color": "white",
            "fontSize": 19,
          }
        }
      >
        Wind Speed
      </Text>
      <Text
        style={
          Object {
            "color": "white",
            "fontSize": 20,
            "textAlign": "center",
          }
        }
      >
        undefined km/h
      </Text>
    </View>
    <View
      style={
        Object {
          "marginLeft": 30,
        }
      }
    >
      <Text
        style={
          Object {
            "color": "white",
            "fontSize": 19,
          }
        }
      >
        Precipitation
      </Text>
      <Text
        style={
          Object {
            "color": "white",
            "fontSize": 20,
            "textAlign": "center",
          }
        }
      />
    </View>
  </View>
</View>
`;

exports[`renders correctly 3`] = `
<View>
  <View />
</View>
`;

exports[`renders correctly 4`] = `
<View>
  <Image
    source={
      Object {
        "uri": "https://countryflagsapi.com/png/undefined",
      }
    }
    style={
      Object {
        "borderRadius": 20,
        "height": 250,
        "marginLeft": "auto",
        "marginRight": "auto",
        "marginTop": 20,
        "width": "80%",
      }
    }
  />
  <View
    style={
      Object {
        "flexDirection": "row",
        "justifyContent": "space-around",
        "marginLeft": -18,
        "marginTop": 50,
      }
    }
  >
    <View>
      <Text
        style={
          Object {
            "fontSize": 20,
          }
        }
      >
        Captial
      </Text>
      <Text
        style={
          Object {
            "color": "black",
            "fontSize": 18,
            "textAlign": "center",
          }
        }
      />
    </View>
    <View
      style={
        Object {
          "marginLeft": 30,
        }
      }
    >
      <Text
        style={
          Object {
            "fontSize": 20,
          }
        }
      >
        Population
      </Text>
      <Text
        style={
          Object {
            "color": "black",
            "fontSize": 18,
            "textAlign": "center",
          }
        }
      />
    </View>
  </View>
  <View
    style={
      Object {
        "flexDirection": "row",
        "justifyContent": "space-around",
        "marginLeft": -22,
        "marginTop": 20,
      }
    }
  >
    <View>
      <Text
        style={
          Object {
            "fontSize": 20,
          }
        }
      >
        Latitude
      </Text>
      <Text
        style={
          Object {
            "color": "black",
            "fontSize": 18,
            "textAlign": "center",
          }
        }
      />
    </View>
    <View
      style={
        Object {
          "marginLeft": 30,
        }
      }
    >
      <Text
        style={
          Object {
            "fontSize": 20,
          }
        }
      >
        Longitude
      </Text>
      <Text
        style={
          Object {
            "color": "black",
            "fontSize": 18,
            "textAlign": "center",
          }
        }
      />
    </View>
  </View>
  <View
    accessible={true}
    collapsable={false}
    focusable={true}
    onClick={[Function]}
    onResponderGrant={[Function]}
    onResponderMove={[Function]}
    onResponderRelease={[Function]}
    onResponderTerminate={[Function]}
    onResponderTerminationRequest={[Function]}
    onStartShouldSetResponder={[Function]}
    style={
      Object {
        "alignItems": "center",
        "backgroundColor": "#cabaa9",
        "borderRadius": 18,
        "height": 45,
        "marginLeft": "auto",
        "marginRight": "auto",
        "marginTop": 38,
        "opacity": 1,
        "padding": 5,
        "paddingBottom": 5,
        "textAlign": "center",
        "width": 180,
      }
    }
  >
    <Text
      style={
        Object {
          "color": "black",
          "fontSize": 15,
          "marginTop": 6,
        }
      }
    >
      Capital weather
    </Text>
  </View>
</View>
`;
